--- a/index.html
+++ b/index.html
@@ -59,13 +59,8 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="" id="drop">Acerca de</a>
-                            <ul class="dropdown-menu">
-                              <li><a class="page-scroll" href="#exhaust_system">Sistema De Escape</a></li>
-                              <li><a class="page-scroll" href="#exhaust_warranty">Garantía De Escape</a></li>
-                              <li><a class="page-scroll" href="#return">Política De Devolución</a></li>
-                              <li><a class="page-scroll" href="#qa">P Y R Escape</a></li>
-                            </ul>
+                        <a class="page-scroll" href="#about">Acerca de</a>
+
                     </li>
 
                     <li>
@@ -89,8 +84,8 @@
     <header>
       <div class="header-content">
             <div class="header-content-inner">
-              <iframe width="854" height="480" src="https://www.youtube.com/embed/283MJsT5QxM?autoplay=1&controls=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
-
+          <!--    <iframe width="854" height="480" src="https://www.youtube.com/embed/283MJsT5QxM?autoplay=1&controls=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
+          -->
             </div>
         </div>
 
@@ -123,67 +118,7 @@
 
                     <img src="img/McLaren_Armytrix Exhaust_VR-4.JPG" class="img-responsive" alt="">
                     <br/>
-                    <h2 class="section-heading" id="qa">LEGAL</h2>
-                    <hr class="light">
-                    <h3>¿Qué tipo de cobertura de la garantía tiene mi sistema de escape? </h3>
-                    <p class="text-faded">
-                      Mientras usted es el comprador original y está utilizando el producto de la manera que está destinado a ser utilizado, la cobertura de la garantía es de 18 meses. Sin embargo, la garantía quedará anulada si se realiza cualquier modificación, instalación incorrecta y / o mal uso del producto.
-                    </p>
-                    <br/>
 
-                    <h3> ¿Y si quiero devolver el producto? </h3>
-                    <p class="text-faded">
-                      Usted califica para devolver el producto (s) si el defecto (s) es de material y / o mano de obra. Tomará 7 a 14 días para nosotros determinar la causa del fallo. Una vez que su reclamo ha sido verificada, proporcionaremos un reemplazo libre de cargo. Sin embargo, todos los gastos de envío son suyos para soportar.
-                    </p>
-
-                    <br/>
-                    <h2 class="section-heading">COMPRAS</h2>
-                    <hr class="light">
-                    <br/>
-                    <h3> ¿ARMYTRIX proporciona servicios hechos a la medida? </h3>
-                    <p class="text-faded">
-                      Por desgracia, no ofrecemos un servicios personalizados. Nuestros sistemas están configurados para realizar su potencial óptimo en las configuraciones actuales.
-                    </p>
-                    <br/>
-                    <h3> ¿Puedo comprar piezas de forma individual? </h3>
-                    <p class="text-faded">
-                      Sí puedes. Sin embargo, hay partes que no están disponibles para ser vendidos por separado seleccionados. Por favor contáctenos para más información.
-                    </p>
-                    <br/>
-                    <h3> ¿Tendré que modificar el sistema o mi vehículo para que se ajuste? </h3>
-                    <p class="text-faded">
-                      No. Cada sistemas de escape ARMYTRIX están diseñados para ajustarse al tipo de vehículo destinado a la perfección. Le recomendamos que consulte a su garaje local para instalar el sistema.
-                    </p>
-                    <br/>
-                    <h3> ¿Cuánto tiempo se necesita para que usted envíe? </h3>
-                    <p class="text-faded">
-                      Si usted reside en Asia, el envío debe estar dentro de 3 días laborables. Para el resto del mundo será entre 5-7 días hábiles.
-                    </p>
-                    <br/>
-                    <h2 class="section-heading">PRODUCTOS</h2>
-                    <hr class="light">
-                    <br/>
-                    <h3> ¿Qué es Valvetronic y cómo puedo controlar eso? </h3>
-                    <p class="text-faded">
-                      Valvetronic is combination of variable valve lift and variable valve timing; together it allows you to control the movements of your exhaust valves. Through the remote control module you can cycle through 3 different modes:
-                    </p>
-                      <ul>
-                          <li>
-                            <p class="text-faded">
-                              ABIERTO - Válvulas abiertas para la completa salida del flujo para producir el sonido más brutal y mejor rendimiento
-                            </p>
-                         </li>
-                         <li>
-                           <p class="text-faded">
-                             APAGADO- Válvulas cerradas para mantener la presión de retorno a bajas RPM para un torque adicional
-                           </p>
-                        </li>
-                        <li>
-                          <p class="text-faded">
-                            AUTO - Usted elige cómo se comportan las válvulas fijando un rango de RPM o la profundidad del pedal.
-                          </p>
-                       </li>
-                      </ul>
 
                     <!--<a href="#" class="btn btn-default btn-xl">Get Started!</a>-->
                 </div>
@@ -230,99 +165,55 @@
         </div>
     </section>
 <!-- portafolio      -->
-    <section class="no-padding" id="portfolio">
+    <section class="bg-dark"  id="portfolio">
         <div class="container-fluid">
             <div class="row no-gutter">
-                <div class="col-lg-4 col-sm-6">
-                    <a  data-toggle="modal" data-target="#carrusel" class="portfolio-box">
-                        <img src="img/portfolio/img/voltexImport.jpg"  class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
 
-                                </div>
-                                <div class="project-name">
-                                    Ver en Catalogo
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a data-toggle="modal" data-target="#carrusel" class="portfolio-box">
-                        <img src="img/portfolio/img/6.jpg"  class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
 
-                                </div>
-                                <div class="project-name">
-                                    Ver en Catalogo
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a data-toggle="modal" data-target="#carrusel" class="portfolio-box">
-                        <img src="img/portfolio/img/3.jpg"  class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
+  <!--/////////////// carrusel //////////////////////////////////////////////////////////  -->
 
-                                </div>
-                                <div class="project-name">
-                                    Ver en Catalogo
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a  data-toggle="modal" data-target="#carrusel" class="portfolio-box">
-                        <img src="img/portfolio/img/16.jpg"  class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
+    <div id="myCarousel" class="carousel slide carousel-fit" data-ride="carousel">
+      <!-- Indicators -->
+      <!--  <ol class="carousel-indicators">
+          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+          <li data-target="#myCarousel" data-slide-to="1"></li>
+          <li data-target="#myCarousel" data-slide-to="2"></li>
+          <li data-target="#myCarousel" data-slide-to="3"></li>
+        </ol>
+-->
+<!-- Wrapper for slides -->
+    <div class="carousel-inner" role="listbox">
+      <div class="item active">
+        <img src="img/portfolio/img/2.jpg" alt="">
+      </div>
 
-                                </div>
-                                <div class="project-name">
-                                    Ver en Catalogo
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a  data-toggle="modal" data-target="#carrusel" class="portfolio-box">
-                        <img src="img/portfolio/img/19.jpg"  class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
+      <div class="item">
+        <img src="img/portfolio/img/3.jpg" alt="">
+      </div>
 
-                                </div>
-                                <div class="project-name">
-                                    Ver en Catalogo
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a data-toggle="modal" data-target="#carrusel" class="portfolio-box">
-                        <img src="img/portfolio/img/50.jpg"  class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
+      <div class="item">
+        <img src="img/portfolio/img/4.jpg" alt="">
+      </div>
 
-                                </div>
-                                <div class="project-name">
-                                    Ver en Catalogo
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
+      <div class="item">
+        <img src="img/portfolio/img/2.jpg" alt="">
+      </div>
+    </div>
+
+<!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+
+
+              <!--  /////////////////////////   -->
+
             </div>
         </div>
     </section>
@@ -348,7 +239,7 @@
         </div>
 
 
-    <aside class="bg-dark">
+  <!--  <aside class="bg-dark">
         <div class="container text-center">
            <div class="call-to-action">
                 <h2>Catalogo completo</h2>
@@ -356,7 +247,7 @@
             </div>
         </div>
     </aside>
-
+-->
 <!-- contact  -->
     <section id="contact">
         <div class="container">
