--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
     <header>
       <div class="header-content">
             <div class="header-content-inner">
-          <!--    <iframe width="854" height="480" src="https://www.youtube.com/embed/283MJsT5QxM?autoplay=1&controls=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
-          -->
+             <iframe width="854" height="480" src="https://www.youtube.com/embed/283MJsT5QxM?autoplay=1&controls=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
+        
             </div>
         </div>
 
@@ -174,17 +174,14 @@
   <!--/////////////// carrusel //////////////////////////////////////////////////////////  -->
 
     <div id="myCarousel" class="carousel slide carousel-fit" data-ride="carousel">
-      <!-- Indicators -->
-      <!--  <ol class="carousel-indicators">
-          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-          <li data-target="#myCarousel" data-slide-to="1"></li>
-          <li data-target="#myCarousel" data-slide-to="2"></li>
-          <li data-target="#myCarousel" data-slide-to="3"></li>
-        </ol>
--->
+
 <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
       <div class="item active">
+        <img src="img/portfolio/img/voltexImport.jpg" alt="">
+      </div>
+
+      <div class="item">
         <img src="img/portfolio/img/2.jpg" alt="">
       </div>
 
@@ -195,9 +192,143 @@
       <div class="item">
         <img src="img/portfolio/img/4.jpg" alt="">
       </div>
-
       <div class="item">
-        <img src="img/portfolio/img/2.jpg" alt="">
+        <img src="img/portfolio/img/5.jpg" alt="">
+      </div>
+      <div class="item">
+        <img src="img/portfolio/img/6.jpg" alt="">
+      </div>
+      <div class="item">
+        <img src="img/portfolio/img/7.jpg.png" alt="">
+      </div>
+      <div class="item">
+        <img src="img/portfolio/img/8.jpg" alt="">
+      </div>
+      <div class="item">
+        <img src="img/portfolio/img/9.jpg" alt="">
+      </div>
+      <div class="item">
+        <img src="img/portfolio/img/10.jpg" alt="">
+      </div>
+      <div class="item">
+        <img src="img/portfolio/img/11.jpg" alt="">
+      </div>
+      <div class="item">
+        <img src="img/portfolio/img/12.jpg" alt="">
+      </div>
+      <div class="item">
+        <img src="img/portfolio/img/13.jpg" alt="">
+      </div>
+      <div class="item">
+        <img src="img/portfolio/img/14.jpg" alt="">
+      </div>
+      <div class="item">
+        <img src="img/portfolio/img/15.jpg" alt="">
+      </div>
+      <div class="item">
+        <img src="img/portfolio/img/16.jpg" alt="">
+      </div>
+      <div class="item">
+        <img src="img/portfolio/img/17.jpg" alt="">
+      </div>
+      <div class="item">
+        <img src="img/portfolio/img/18.jpg" alt="">
+      </div>
+      <div class="item">
+        <img src="img/portfolio/img/19.jpg" alt="">
+      </div>
+      <div class="item">
+        <img src="img/portfolio/img/20.jpg" alt="">
+      </div>
+      <div class="item">
+        <img src="img/portfolio/img/21.jpg" alt="">
+      </div>
+      <div class="item">
+        <img src="img/portfolio/img/22.jpg" alt="">
+      </div>
+      <div class="item">
+        <img src="img/portfolio/img/23.jpg" alt="">
+      </div>
+      <div class="item">
+        <img src="img/portfolio/img/24.jpg" alt="">
+      </div>
+      <div class="item">
+        <img src="img/portfolio/img/25.jpg" alt="">
+      </div>
+      <div class="item">
+        <img src="img/portfolio/img/26.jpg" alt="">
+      </div>
+      <div class="item">
+        <img src="img/portfolio/img/27.jpg" alt="">
+      </div>
+      <div class="item">
+        <img src="img/portfolio/img/28.jpg" alt="">
+      </div>
+      <div class="item">
+        <img src="img/portfolio/img/29.jpg" alt="">
+      </div>
+      <div class="item">
+        <img src="img/portfolio/img/30.jpg" alt="">
+      </div>
+      <div class="item">
+        <img src="img/portfolio/img/31.jpg" alt="">
+      </div>
+      <div class="item">
+        <img src="img/portfolio/img/32.jpg" alt="">
+      </div>
+      <div class="item">
+        <img src="img/portfolio/img/33.jpg" alt="">
+      </div>
+      <div class="item">
+        <img src="img/portfolio/img/34.jpg" alt="">
+      </div>
+      <div class="item">
+        <img src="img/portfolio/img/35.jpg" alt="">
+      </div>
+      <div class="item">
+        <img src="img/portfolio/img/36.jpg" alt="">
+      </div>
+      <div class="item">
+        <img src="img/portfolio/img/37.jpg" alt="">
+      </div>
+      <div class="item">
+        <img src="img/portfolio/img/38.jpg" alt="">
+      </div>
+      <div class="item">
+        <img src="img/portfolio/img/39.jpg" alt="">
+      </div>
+      <div class="item">
+        <img src="img/portfolio/img/40.jpg" alt="">
+      </div>
+      <div class="item">
+        <img src="img/portfolio/img/41.jpg" alt="">
+      </div>
+      <div class="item">
+        <img src="img/portfolio/img/42.jpg" alt="">
+      </div>
+      <div class="item">
+        <img src="img/portfolio/img/43.jpg" alt="">
+      </div>
+      <div class="item">
+        <img src="img/portfolio/img/44.jpg" alt="">
+      </div>
+      <div class="item">
+        <img src="img/portfolio/img/45.jpg" alt="">
+      </div>
+      <div class="item">
+        <img src="img/portfolio/img/46.jpg" alt="">
+      </div>
+      <div class="item">
+        <img src="img/portfolio/img/47.jpg" alt="">
+      </div>
+      <div class="item">
+        <img src="img/portfolio/img/48.jpg" alt="">
+      </div>
+      <div class="item">
+        <img src="img/portfolio/img/49.jpg" alt="">
+      </div>
+      <div class="item">
+        <img src="img/portfolio/img/50.jpg" alt="">
       </div>
     </div>
 
